--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -16,7 +16,7 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 # https://developer.apple.com/library/archive/documentation/General/Reference/InfoPlistKeyReference/Articles/CoreFoundationKeys.html
 # In Windows, build-name is used as the major, minor, and patch parts
 # of the product and file versions while build-number is used as the build suffix.
-version: 1.0.0+1
+version: 2.0.0+1
 
 environment:
   sdk: ^3.6.1
@@ -62,6 +62,16 @@ dependencies:
   youtube_player_flutter: ^9.1.1
   lucide_icons: ^0.257.0
   pretty_dio_logger: ^1.4.0
+  firebase_core: ^3.11.0
+  firebase_auth: ^5.4.2
+  firebase_messaging: ^15.2.2
+  flutter_local_notifications: ^18.0.1
+  material_design_icons_flutter: ^7.0.7296
+  el_tooltip: ^2.2.1
+  super_tooltip: ^2.0.9
+  flutter_native_splash: ^2.4.4
+  gif_view: ^1.0.0
+
 
 
 
