--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -16,7 +16,7 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 # https://developer.apple.com/library/archive/documentation/General/Reference/InfoPlistKeyReference/Articles/CoreFoundationKeys.html
 # In Windows, build-name is used as the major, minor, and patch parts
 # of the product and file versions while build-number is used as the build suffix.
-version: 2.0.0+4
+version: 2.0.0+5
 
 environment:
   sdk: ^3.6.1
@@ -47,7 +47,6 @@ dependencies:
   flick_video_player: ^0.9.0
   video_player: ^2.9.2
   visibility_detector: ^0.4.0+2
-  intl: ^0.20.2
   carousel_slider: ^5.0.0
   share_plus: ^10.1.4
   community_material_icon: ^5.9.55
@@ -75,6 +74,10 @@ dependencies:
   google_sign_in: ^6.2.2
   uuid: ^4.5.1
   flutter_pdfview: ^1.4.0
+  file_picker: ^10.0.0
+  camera: ^0.11.1
+  flutter_animate: ^4.5.2
+  easy_localization: ^3.0.7+1
 
 
 
@@ -110,6 +113,7 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
     - assets/
+    - assets/translations/
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/to/resolution-aware-images
