--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -45,7 +45,6 @@ dependencies:
   flutter_boxicons: ^3.2.0
   flutter_initicon: ^3.0.1
   flick_video_player: ^0.9.0
-  video_player: ^2.9.2
   visibility_detector: ^0.4.0+2
   carousel_slider: ^5.0.0
   share_plus: ^10.1.4
@@ -86,6 +85,12 @@ dependencies:
   youtube_explode_dart: ^2.4.2
   blur: ^4.0.2
   fl_chart: ^0.71.0
+  media_kit: ^1.1.11 # Primary package.
+  media_kit_video: ^1.2.5 # For video rendering.
+  media_kit_libs_video: ^1.0.5 # Native video dependencies.
+  video_player: ^2.10.0
+  cached_video_player_plus: ^3.0.3
+
 
 
 
